--- a/_assets/less/elements.less
+++ b/_assets/less/elements.less
@@ -13,7 +13,7 @@ hr {
 // Figures and images
 // --------------------------------------------------
 figure {
-	margin: 0 -20px;
+	margin: 0;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	.clearfix();
@@ -53,10 +53,6 @@ figure {
 				clear: left;
 			}
 		}
-	}
-	@media @medium {
-		margin-left: 0;
-		margin-right: 0;
 	}
 }
 svg:not(:root) {
