--- a/_assets/less/typography.less
+++ b/_assets/less/typography.less
@@ -50,7 +50,7 @@ figcaption {
 	position: relative;
 	margin-top: 30px;
 	margin-left: -40px;
-	margin-right: -40px;
+	margin-right: -20px;
 	padding: 20px 40px;
 	text-indent: 0;
 	.font-rem(16);
